# devloop

./: .amp-config-example.json  .devloop-repository-marker  .gitignore  AGENTS.md  AGENT_INVESTIGATION_PLAN.md  AGENT_SUMMARY_SLASH_COMMAND_PLAN.md  AMP_ONBOARDING.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_HOOKS_IMPLEMENTATION.md  CLAUDE_CODE_HOOKS_REVIEW.md  CLAUDE_CODE_TEST_GUIDE.md  CLI_REFERENCE.md  CODEBASE_ASSESSMENT.md  CODING_RULES.md  COMMANDS.md  CONSOLIDATION_COMPLETE.md  CONTEXT_STORE_STATUS.md  DEVELOPER_WORKFLOW.md  DOC_LIFECYCLE_AGENT_SPEC.md  ENHANCED_INTEGRATION.md  ENHANCEMENTS_SUMMARY.md  FIX_SUMMARY.md  GETTING_STARTED.md  HOOK_OPTIMIZATION_ANALYSIS.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION_AUTOMATION.md  INSTALLATION_PLAN_SUMMARY.md  INTERACTION_MODEL.md  LICENSE  OPTIONAL_AGENTS_IMPLEMENTATION.md  PACKAGING_REVIEW.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PROJECT_SUMMARY.md  (+54 more)
.agents/: HOOK_TROUBLESHOOTING.md  check-devloop-status  cleanup-bg-jobs  clear-check-cache  detect-changed-modules  preflight.sh  safe-commit.sh  verify-all  verify-common-checks  verify-task-complete
.agents/commands/: README.md  agent-summary
.agents/hooks/: README.md  check-devloop-context  check-devloop-status  check-doc-deletions  claude-file-protection  claude-post-tool-use  claude-session-start  claude-stop  extract-findings-to-beads  install-claude-hooks  post-task  subagent-stop  user-prompt-submit
.amp/: CLAUDE_CODE_HOOKS_CHECKLIST.md  HOOKS_REVIEW_INDEX.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_TEST_PLAN.md  RELEASE_v0.6.1_FINAL_SUMMARY.md  RELEASE_v0.6.1_STATUS.md  claude_code_hooks_findings.md
.amp/subagents/: async-findings-extractor.md  ci-monitor.md  code-quality-checker.md
.beads/: deletions.jsonl  issues.jsonl
.claude/: AGENT_STATUS.md  CLAUDE.md
.claude/commands/: README.md  agent-summary.md  devloop-status.md
.dev-agents/: AGENTS.md  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  agents.json
.dev-agents/context/: formatter.json  performance.json  relevant.json
.dev-agents/feedback/: performance.json
.dev-agents/integration/: amp-adapter.py  amp-enhanced-adapter.py  generate_status.py
.dev-agents/performance/: metrics.jsonl
.devloop/: AGENTS.md  AGENT_STATUS.md  AI_AGENTS.md  CI_BREAKAGE_ANALYSIS.md  CI_IMPROVEMENTS_SUMMARY.md  CI_INTEGRATION.md  CI_TIGHTENING_IMPLEMENTATION.md  CLAUDE.md  DEVLOOP_TIGHTENING_ANALYSIS.md  INTEGRATION_GUIDE.md  README.md  agents.json  beads_template.md  ci-status.json  devloop.pid  devloop_status_template.md  events.db  events.db-journal  health_check.json  settings.local.json
.devloop/backups/: 0835f89f_20251025T184340_073620.backup
.devloop/context/: agent-results.json  auto_fixed.json  background.json  immediate.json  index.json  linter.json  relevant.json  security.json  test.json  type.json
.devloop/feedback/: performance.json
.devloop/integration/: auto_fix_engine.py  claude-code-adapter.py
.devloop/performance/: metrics.jsonl
.devloop/scripts/: check-ci-status.sh  git-push-with-ci
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: AGENT_API_REFERENCE.md  AGENT_DEVELOPMENT.md  AGENT_DEVELOPMENT_GUIDE.md  AGENT_DOCUMENTATION_INDEX.md  AGENT_EXAMPLES.md  AGENT_TROUBLESHOOTING.md  AMP_INTEGRATION.md  AMP_INTEGRATION_GUIDE.md  ARTIFACTORY_SETUP.md  AUDIT_LOGGING.md  CLAUDE_CODE_INTEGRATION.md  CONTEXT_STORE_DESIGN.md  DEBUGGING_GUIDE.md  HYBRID_SANDBOX_DESIGN.md  LARGE_REPO_OPTIMIZATION.md  LOG_ROTATION.md  MARKETPLACE_API.md  MARKETPLACE_GUIDE.md  METRICS_AND_MONITORING.md  MULTI_PROJECT_SETUP.md  PERFORMANCE_TUNING.md  PRE_COMMIT_AUDIT.md  PRODUCTION_DAEMON_SETUP.md  PROVIDER_SYSTEM.md  PYODIDE_INSTALLATION.md  PYODIDE_SANDBOX_DESIGN.md  RESOURCE_SHARING.md  SANDBOX_INSTALLATION.md  TESTING_INSTALLATION.md  TESTING_PLAN.md  TOKEN_SECURITY.md  UPGRADE_GUIDE.md  VSCODE_EXTENSION_DESIGN.md  WORKSPACE_CONFIGURATION.md  agent-development.md  agents.md  architecture.md  cli-commands.md  configuration.md  development.md  (+6 more)
docs/archive/: README.md
docs/completed/: PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  THREAD_COMPLETION_SUMMARY.md
docs/contributing/: agents.md
docs/guides/: AMP_ONBOARDING.md  AMP_THREAD_INTEGRATION_PLAN.md  THREAD_HANDOFF.md  report-only-mode.md
docs/planning/: INSTALLATION_AUTOMATION.md  INSTALLATION_PLAN_SUMMARY.md  PUSH_DISCIPLINE_ISSUE.md  RENAMING_PLAN.md
docs/plans/: 2026-01-31-devloop-claude-context-integration-design.md  2026-03-13-tool-dependency-resolution-design.md  2026-03-13-tool-dependency-resolution.md
docs/reference/: commands.md  configuration-schema.md
examples/: README.md
history/: CI_QUALITY_COMMITMENT.md  DEVELOPER_DISCIPLINE_FRAMEWORK.md  LESSONS_LEARNED.md  NEXT_STEPS.md  PACKAGING_REVIEW.md  PROCESS_IMPROVEMENTS_IMPLEMENTED.md  RELEASE_v0.2.2.md  RISK_ASSESSMENT.md  RISK_FIX_PROGRESS.md  SYSTEM_VERIFICATION.md
marketplace_agents/devloop-formatter/: README.md  __init__.py  agent.json
marketplace_agents/devloop-linter/: README.md  __init__.py  agent.json
marketplace_agents/devloop-security-scanner/: README.md  (+2 more)
scripts/: bump-version.py  check_agent_health.py  test_daemon_supervision.sh  verify-before-push.sh
templates/: AGENTS.md.template
tests/: PERFORMANCE.md  __init__.py  test_claude_hooks.py  test_dora_metrics.py  test_file_protection.py  test_marketplace_api.py  test_marketplace_cache.py  test_marketplace_http_server.py  test_marketplace_installer.py  test_marketplace_metadata.py  test_marketplace_publisher.py  test_marketplace_registry.py  test_marketplace_reviews.py  test_marketplace_search.py  test_marketplace_signing.py  test_metrics_command.py  test_post_commit_hook.py  test_post_commit_integration.sh  test_project_context.py  test_prototype.py  test_providers.py  test_release_integration.py  test_release_manager.py  test_telemetry.py  test_test_runner_context.py  test_value_metrics.py
vscode-extension/: README.md  package.json  tsconfig.json
(+362 files in other folders)
