[tool.poetry]
name = "devloop"
version = "0.2.0"
description = "Intelligent background agents for development workflow automation"
authors = ["DevLoop Contributors <devloop@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wioota/devloop"
homepage = "https://github.com/wioota/devloop"
documentation = "https://github.com/wioota/devloop#readme"
keywords = [
    "agents",
    "development",
    "automation",
    "code-quality",
    "testing",
    "linting",
    "security",
    "continuous-integration",
    "devops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]
packages = [{include = "devloop", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
watchdog = "^3.0"
typer = ">=0.15,<1.0"
rich = "^13.7"
aiofiles = "^23.2"
psutil = "^5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.8"
bandit = "^1.7"
radon = "^6.0"
types-aiofiles = "^23.2"

[tool.poetry.scripts]
devloop = "devloop.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
follow_imports = "normal"
ignore_missing_imports = true
show_error_codes = true
