[tool.poetry]
name = "devloop"
version = "0.8.0"
description = "Intelligent background agents for development workflow automation"
authors = ["DevLoop Contributors <devloop@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wioota/devloop"
homepage = "https://github.com/wioota/devloop"
documentation = "https://github.com/wioota/devloop#readme"
keywords = [
    "agents",
    "development",
    "automation",
    "code-quality",
    "testing",
    "linting",
    "security",
    "continuous-integration",
    "devops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]
packages = [{include = "devloop", from = "src"}]
include = [
    "src/devloop/security/package.json",
    "src/devloop/security/pyodide_runner.js",
    "src/devloop/cli/templates/claude_commands/*.md",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
watchdog = "^3.0"
typer = ">=0.15,<1.0"
rich = "^13.7"
aiofiles = "^23.2"
psutil = "^5.9"
pygls = "^1.3.0"
lsprotocol = "^2023.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = ">=24.3.0"
ruff = "^0.1"
mypy = "^1.8"
bandit = "^1.7"
radon = "^6.0"
types-aiofiles = "^23.2"
pytest-rerunfailures = "^16.1"
types-pyyaml = "^6.0.12.20250915"
types-psutil = "^7.2.1.20251231"

[tool.poetry.extras]
snyk = []
code-rabbit = []
ci-monitor = []
marketplace-api = ["fastapi", "uvicorn"]
all-optional = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
devloop = "devloop.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "security: marks tests as security tests",
    "benchmark: marks tests as benchmarks",
]
addopts = "--cov=src/devloop --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src/devloop"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
